[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/systems/ChickenCoop.gd" type="Script" id=1]
[ext_resource path="res://scenes/ui/DraggableWindow.tscn" type="PackedScene" id=2]

[node name="ChickenCoop" type="Node2D"]
script = ExtResource( 1 )
num_food = 10
num_chickens = 10

[node name="DraggableWindow" parent="." instance=ExtResource( 2 )]

[node name="MarginContainer" parent="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer" index="1"]
margin_right = 21.0

[node name="HBoxContainer" parent="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/MarginContainer" index="0"]
margin_right = 21.0

[node name="Button" parent="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/MarginContainer/HBoxContainer" index="0"]
margin_right = 13.0

[node name="VBoxContainer" type="VBoxContainer" parent="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer/CenterContainer" index="0"]
margin_left = 103.0
margin_top = 35.0
margin_right = 359.0
margin_bottom = 150.0

[node name="ProgressBar" type="ProgressBar" parent="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_right = 256.0
margin_bottom = 19.0
rect_min_size = Vector2( 256, 0 )
size_flags_horizontal = 3
max_value = 1.0

[node name="FoodLabel" type="Label" parent="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 23.0
margin_right = 256.0
margin_bottom = 42.0
rect_pivot_offset = Vector2( -1125.97, 483.106 )

[node name="ChickenLabel" type="Label" parent="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 256.0
margin_bottom = 65.0
rect_pivot_offset = Vector2( -1125.97, 483.106 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EggLabel" type="Label" parent="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 69.0
margin_right = 256.0
margin_bottom = 88.0
rect_pivot_offset = Vector2( -1125.97, 483.106 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 92.0
margin_right = 256.0
margin_bottom = 115.0
text = "SELL"

[connection signal="pressed" from="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]

[editable path="DraggableWindow"]
